Add Fixes for Snapshotting Databricks Tables
1. BIGINT, INT, TIMESTAMP, STRING custom data types for accurate snapshots
2. Add unique constraints extractor to pull from system tables.